# tracy_learn_DS_everyday_2026

./: README.md
Projects/001_evidently_monitor_observation/: .gitignore  main.py  pyproject.toml
Projects/001_evidently_monitor_observation/0_example/: README.md
Projects/001_evidently_monitor_observation/0_example/data_drift_grafana_dashboard/: evidently_metrics_calculation.py
Projects/001_evidently_monitor_observation/config/: monitoring_config.yaml
Projects/001_evidently_monitor_observation/data/data_khql/: Untitled  feature_importance_20260105_164657.csv
Projects/001_evidently_monitor_observation/data/dummy_data/: cur_202601_features.csv  cur_202601_score.csv  cur_all_features.csv  cur_all_labels.csv  monitoring_config.yaml  ref_all_features.csv  ref_all_labels.csv  ref_all_score.csv
Projects/001_evidently_monitor_observation/docs/: agile_project_plan.md  doc.md  feature_matrix_recommendations.md  note.md  to_do_list.md
Projects/001_evidently_monitor_observation/notebooks/: .env  002_khql_test_report.ipynb
Projects/001_evidently_monitor_observation/notebooks/outputs/: DataSummaryPreset.html  khql_reports.html  khql_reports_20260112.html  report_test.html
Projects/001_evidently_monitor_observation/output_templates/: 1.json  score_feature_daily.csv  score_model_daily.csv
Projects/001_evidently_monitor_observation/src/: 001_start.py  basic.py  method.py  query.sql  stress_test.py
Projects/001_evidently_monitor_observation/src/monitoring/: format.html  (+2 more)
Projects/Baseline_project/baseline_project_with_uv/: .gitignore  README.md  main.py  pyproject.toml
(+17 files in other folders)
