[project]
name = "001-evidently-monitor-observation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evidently>=0.7.19",
    "ipykernel>=7.1.0",
    "numpy>=2.4.0",
    "optbinning>=0.20.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.6.0",
    "scorecardpy>=0.1.9.7",
]
